correct title spacing

--- a/src/components/info/style.styl
+++ b/src/components/info/style.styl
@@ -49,7 +49,7 @@
             font-family: var(--Font-title);
             font-weight: bolder;
             font-size: 4vw;
-            margin: 0 auto 0;
+            margin: 0 auto 0 0;
         }
     }
 
